Add more meta and logos; change the background; add other pages

--- a/index.html
+++ b/index.html
@@ -5,47 +5,42 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cooking with Parul</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cookie">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-    <link rel="stylesheet" href="assets/css/Card-Deck.css">
-    <link rel="stylesheet" href="assets/css/Footer-Dark.css">
-    <link rel="stylesheet" href="assets/css/Material-Card.css">
-    <link rel="stylesheet" href="assets/css/Pretty-Footer.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/styles.min.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-light navbar-expand">
-        <div class="container-fluid"><a class="navbar-brand" href="#" style="font-family:Lato, sans-serif;color:rgb(61,61,61);"><strong>Cooking with Parul</strong></a>
-            <button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navcol-1">
+    <nav class="navbar navbar-light navbar-expand-md">
+        <div class="container-fluid"><a class="navbar-brand" href="#" style="color:rgb(40,40,40);font-family:Montserrat, sans-serif;"><strong>Cooking with Parul</strong></a>
+            <button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-2"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navcol-2">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="font-family:Lato, sans-serif;">Plan </a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="font-family:Lato, sans-serif;">Reserve </a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="font-family:Lato, sans-serif;">FAQ </a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="font-family:Lato, sans-serif;">Contact me</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="font-family:Montserrat, sans-serif;">Classes </a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="font-family:Montserrat, sans-serif;">Reserve </a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="font-family:Montserrat, sans-serif;">FAQ </a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="font-family:Montserrat, sans-serif;">Contact me</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <div id="welcome">
+    <div id="welcome" style="background-image:url(&quot;assets/img/59432738indian-spices.jpg&quot;);">
         <div class="jumbotron">
-            <h1 id="jumbotron-header" style="font-family:Lato, sans-serif;color:rgb(61,61,61);">Cooking with Parul</h1>
+            <h1 id="jumbotron-header" style="font-family:Montserrat, sans-serif;color:rgb(40,40,40);"><strong>Cooking with Parul</strong></h1>
             <div class="row">
                 <div class="col"><img src="assets/img/parul_square.png" id="parul-photo"></div>
                 <div class="col">
-                    <p class="text-center" style="padding-top:70px;font-size:18px;color:rgb(61,61,61);font-family:Lato, sans-serif;"><em>Learn to cook delicious Indian food with me in Bangalore!</em></p>
-                    <p class="text-center" style="font-family:Lato, sans-serif;color:rgb(61,61,61);font-size:18px;"><em>Share a meal, laugh a lot, tell us some stories!</em></p>
-                    <p class="text-center" style="font-family:Lato, sans-serif;color:rgb(61,61,61);font-size:18px;"><em>Make some memories.</em></p>
-                    <p class="text-center" style="padding-top:40px;"><a class="btn btn-success btn-lg" role="button" href="#" style="padding-top:8px;font-family:Lato, sans-serif;color:rgb(255,255,255);">Learn More</a></p>
+                    <h3 style="margin-top:50px;font-family:Montserrat, sans-serif;color:rgb(40,40,40);">Learn to cook delicious Indian food!</h3>
+                    <h3 style="margin-top:40px;font-family:Montserrat, sans-serif;color:rgb(40,40,40);">Share a meal, laugh a lot, tell us some stories! </h3>
+                    <h3 style="margin-top:40px;font-family:Montserrat, sans-serif;color:rgb(40,40,40);">Make some memories. </h3>
+                    <p class="text-center" style="padding-top:40px;"><a class="btn btn-success btn-lg" role="button" href="#" style="padding-top:8px;font-family:Montserrat, sans-serif;color:rgb(255,255,255);">Choose a Class</a></p>
                 </div>
             </div>
         </div>
     </div>
-    <div></div>
     <div style="margin-top:50px;">
         <div class="container">
             <div class="row">
@@ -59,9 +54,29 @@
                     <p style="color:rgb(61,61,61);font-size:14px;">Juan, Argentina</p>
                 </div>
                 <div class="col-md-4">
-                    <p style="color:rgb(61,61,61);font-size:14px;"><em>She is very polite,humble and listens to your query patiently.she very well manages to build a comfortable atmosphere because of this the class becomes really interactive.Moreover she even shares her very own cooking tips and tricks which makes cooking more magical. </em></p>
+                    <p style="color:rgb(61,61,61);font-size:14px;"><em>She is very polite,humble and listens to your query patiently. She very well manages to build a comfortable atmosphere andbecause of this the class becomes really interactive.Moreover she even shares her very own cooking tips and tricks which makes cooking more magical. </em></p>
                     <p
                     style="color:rgb(61,61,61);font-size:14px;">Ruchika, Bangalore</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <p class="text-center" style="margin-top:20px;font-family:Montserrat, sans-serif;font-size:14px;"><em>More reviews at: </em><a href="https://www.urbanpro.com/bangalore/parul-thacker/4024269" target="_blank"><em>Urbanpro</em></a></p>
+        </div>
+    </div>
+    <div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4"><img src="assets/img/icons/noun_578661_70C041.png" class="mx-auto d-block logo">
+                    <p class="text-center" style="font-family:Montserrat, sans-serif;">You will create the meal while also editing and following a set of notes</p>
+                </div>
+                <div class="col-md-4"><img src="assets/img/icons/noun_35367_f51a11.png" class="mx-auto d-block logo">
+                    <p class="text-center" style="font-family:Montserrat, sans-serif;">Learn the foundations and then learn to experiment while staying true to the Indian styles</p>
+                </div>
+                <div class="col-md-4"><img src="assets/img/icons/noun_146647_70C041.png" class="mx-auto d-block logo">
+                    <p class="text-center" style="font-family:Montserrat, sans-serif;">Share a meal or take it home for family.</p>
                 </div>
             </div>
         </div>
@@ -86,15 +101,15 @@
             </div>
             <div class="clearfix"></div>
             <div class="col-md-4 footer-about">
-                <h4>About the company</h4>
-                <p> Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce euismod convallis velit, eu auctor lacus vehicula sit amet.
-                </p>
-                <div class="social-links social-icons"><a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-linkedin"></i></a><a href="#"><i class="fa fa-github"></i></a></div>
+                <h4>Cooking with Parul</h4>
+                <p>Personal, hands-on, Indian cooking classes in Bangalore . </p>
+                <div class="social-links social-icons"><a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
             </div>
         </div>
+        <p class="text-center" style="padding-top:20px;font-family:Montserrat, sans-serif;font-size:12px;">Made with ❤️ and 🌶</p>
     </footer>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.2/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
