updates on all pages

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
             <div class="collapse navbar-collapse" id="navcol-2">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="classes.html" style="font-family:Montserrat, sans-serif;">Classes </a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="reserve.html" style="font-family:Montserrat, sans-serif;">Reserve </a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="faq.html" style="font-family:Montserrat, sans-serif;">FAQ </a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="contact.html" style="font-family:Montserrat, sans-serif;">Contact me</a></li>
                 </ul>
@@ -49,13 +48,12 @@
                     style="color:rgb(61,61,61);font-size:14px;">Jed, USA</p>
                 </div>
                 <div class="col-md-4">
-                    <p style="color:rgb(61,61,61);font-size:14px;"><em> Happy to be taking back to Argentina a very enriching experience and lots of tasty dishes to share! And moreover, new friends from Bangalore. Thanks a lot Parul </em></p>
-                    <p style="color:rgb(61,61,61);font-size:14px;">Juan, Argentina</p>
+                    <p style="color:rgb(61,61,61);font-size:14px;"><em>This is how one can recognize a great teacher, she not only knows the recipe but knows how to teach.</em> </p>
+                    <p style="color:rgb(61,61,61);font-size:14px;">Emili, France</p>
                 </div>
                 <div class="col-md-4">
-                    <p style="color:rgb(61,61,61);font-size:14px;"><em>She is very polite,humble and listens to your query patiently. She very well manages to build a comfortable atmosphere andbecause of this the class becomes really interactive.Moreover she even shares her very own cooking tips and tricks which makes cooking more magical. </em></p>
-                    <p
-                    style="color:rgb(61,61,61);font-size:14px;">Ruchika, Bangalore</p>
+                    <p style="color:rgb(61,61,61);font-size:14px;"><em> Happy to be taking back to Argentina a very enriching experience and lots of tasty dishes to share! And moreover, new friends from Bangalore. Thanks a lot Parul </em></p>
+                    <p style="color:rgb(61,61,61);font-size:14px;">Juan, Argentina</p>
                 </div>
             </div>
         </div>
