--- a/classes.html
+++ b/classes.html
@@ -19,15 +19,14 @@
             <div class="collapse navbar-collapse" id="navcol-2">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="classes.html" style="font-family:Montserrat, sans-serif;">Classes </a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="reserve.html" style="font-family:Montserrat, sans-serif;">Reserve </a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="faq.html" style="font-family:Montserrat, sans-serif;">FAQ </a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="contact.html" style="font-family:Montserrat, sans-serif;">Contact me</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <div style="margin-top:60px;">
-        <div class="container">
+    <div id="welcome" style="background-image:url(&quot;assets/img/koushik-c-392711.jpg&quot;);">
+        <div class="jumbotron">
             <div class="row">
                 <div class="col-md-4"><img src="assets/img/icons/noun_469425_51A7F9.png" class="mx-auto d-block logo">
                     <h5 class="text-center" style="font-family:Montserrat, sans-serif;"><strong>Duration</strong> </h5>
@@ -51,16 +50,35 @@
             <li class="nav-item"><a class="nav-link active" role="tab" data-toggle="tab" href="#tab-1">North Indian</a></li>
             <li class="nav-item"><a class="nav-link" role="tab" data-toggle="tab" href="#tab-2">South </a></li>
             <li class="nav-item"><a class="nav-link" role="tab" data-toggle="tab" href="#tab-3">Street </a></li>
+            <li class="nav-item"><a class="nav-link" role="tab" data-toggle="tab" href="#tab-4">Tab</a></li>
+            <li class="nav-item"><a class="nav-link" role="tab" data-toggle="tab" href="#tab-5">Tab</a></li>
         </ul>
         <div class="tab-content">
             <div class="tab-pane active" role="tabpanel" id="tab-1">
                 <p>Food from my days spent in Delhi and Punjab</p>
-                <div class="card">
-                    <div class="card-body">
-                        <h4 class="card-title">Title</h4>
-                        <h6 class="text-muted card-subtitle mb-2">Subtitle</h6>
-                        <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p><a class="card-link" href="#">Link</a><a class="card-link"
-                        href="#">Link</a></div>
+                <div>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <h4 class="card-title">Title</h4>
+                                        <h6 class="text-muted card-subtitle mb-2">Subtitle</h6>
+                                        <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p><a class="card-link" href="#">Link</a><a class="card-link"
+                                        href="#">Link</a></div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <h4 class="card-title">Title</h4>
+                                        <h6 class="text-muted card-subtitle mb-2">Subtitle</h6>
+                                        <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p><a class="card-link" href="#">Link</a><a class="card-link"
+                                        href="#">Link</a></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="tab-pane" role="tabpanel" id="tab-2">
@@ -68,6 +86,12 @@
             </div>
             <div class="tab-pane" role="tabpanel" id="tab-3">
                 <p>Content for tab 3.</p>
+            </div>
+            <div class="tab-pane" role="tabpanel" id="tab-4">
+                <p>Tab content.</p>
+            </div>
+            <div class="tab-pane" role="tabpanel" id="tab-5">
+                <p>Tab content.</p>
             </div>
         </div>
     </div>
