--- a/faq.html
+++ b/faq.html
@@ -19,13 +19,36 @@
             <div class="collapse navbar-collapse" id="navcol-2">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="classes.html" style="font-family:Montserrat, sans-serif;">Classes </a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="reserve.html" style="font-family:Montserrat, sans-serif;">Reserve </a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="faq.html" style="font-family:Montserrat, sans-serif;">FAQ </a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="contact.html" style="font-family:Montserrat, sans-serif;">Contact me</a></li>
                 </ul>
             </div>
         </div>
     </nav>
+    <h3 class="text-center" style="font-family:Montserrat, sans-serif;">Frequently Asked Questions</h3>
+    <ul class="list-group">
+        <li class="list-group-item"><span>This is a question</span>
+            <p>This is an answer</p>
+        </li>
+        <li class="list-group-item"><span>This is a question</span>
+            <p>This is an answer</p>
+        </li>
+        <li class="list-group-item"><span>This is a question</span>
+            <p>This is an answer</p>
+        </li>
+        <li class="list-group-item"><span>This is a question</span>
+            <p>This is an answer</p>
+        </li>
+        <li class="list-group-item"><span>This is a question</span>
+            <p>This is an answer</p>
+        </li>
+        <li class="list-group-item"><span>This is a question</span>
+            <p>This is an answer</p>
+        </li>
+        <li class="list-group-item"><span>This is a question</span>
+            <p>This is an answer</p>
+        </li>
+    </ul>
     <footer class="footer navbar-fixed-bottom" style="margin-top:0px;background-color:#404040;">
         <div class="container">
             <div class="row">
