clean up FAQ and Contact page

--- a/classes.html
+++ b/classes.html
@@ -18,7 +18,7 @@
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-2"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-2">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="classes.html" style="font-family:Montserrat, sans-serif;">Classes </a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="classes.html" style="font-family:Montserrat, sans-serif;">Classes </a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="faq.html" style="font-family:Montserrat, sans-serif;">FAQ </a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="contact.html" style="font-family:Montserrat, sans-serif;">Contact me</a></li>
                 </ul>
@@ -47,25 +47,30 @@
     </div>
     <div style="margin-top:40px;">
         <ul class="nav nav-tabs">
-            <li class="nav-item"><a class="nav-link active" role="tab" data-toggle="tab" href="#tab-1">North Indian</a></li>
-            <li class="nav-item"><a class="nav-link" role="tab" data-toggle="tab" href="#tab-2">South </a></li>
-            <li class="nav-item"><a class="nav-link" role="tab" data-toggle="tab" href="#tab-3">Street </a></li>
-            <li class="nav-item"><a class="nav-link" role="tab" data-toggle="tab" href="#tab-4">Tab</a></li>
-            <li class="nav-item"><a class="nav-link" role="tab" data-toggle="tab" href="#tab-5">Tab</a></li>
+            <li class="nav-item"><a class="nav-link active" role="tab" data-toggle="tab" href="#tab-1" style="font-family:Montserrat, sans-serif;">North Indian</a></li>
+            <li class="nav-item"><a class="nav-link" role="tab" data-toggle="tab" href="#tab-2" style="font-family:Montserrat, sans-serif;">South </a></li>
+            <li class="nav-item"><a class="nav-link" role="tab" data-toggle="tab" href="#tab-3" style="font-family:Montserrat, sans-serif;">Street </a></li>
+            <li class="nav-item"><a class="nav-link" role="tab" data-toggle="tab" href="#tab-4" style="font-family:Montserrat, sans-serif;">Tab</a></li>
+            <li class="nav-item"><a class="nav-link" role="tab" data-toggle="tab" href="#tab-5" style="font-family:Montserrat, sans-serif;">Tab</a></li>
         </ul>
         <div class="tab-content">
             <div class="tab-pane active" role="tabpanel" id="tab-1">
-                <p>Food from my days spent in Delhi and Punjab</p>
+                <p>Some text here</p>
                 <div>
                     <div class="container">
                         <div class="row">
                             <div class="col">
                                 <div class="card">
                                     <div class="card-body">
-                                        <h4 class="card-title">Title</h4>
-                                        <h6 class="text-muted card-subtitle mb-2">Subtitle</h6>
-                                        <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p><a class="card-link" href="#">Link</a><a class="card-link"
-                                        href="#">Link</a></div>
+                                        <h4 class="text-center card-title">Class Name</h4>
+                                        <h6 class="text-muted card-subtitle mb-2">Some Dish</h6>
+                                        <p class="card-text">Short description</p>
+                                        <h6 class="text-muted card-subtitle mb-2">Some Dish</h6>
+                                        <p class="card-text">Short description</p>
+                                        <h6 class="text-muted card-subtitle mb-2">Some Dish</h6>
+                                        <p class="card-text">Short description</p>
+                                        <h6 class="text-muted card-subtitle mb-2">Some Dish</h6>
+                                        <p class="card-text">Short description</p><a class="card-link text-white bg-primary" href="#">Reserve </a></div>
                                 </div>
                             </div>
                             <div class="col">
@@ -73,8 +78,10 @@
                                     <div class="card-body">
                                         <h4 class="card-title">Title</h4>
                                         <h6 class="text-muted card-subtitle mb-2">Subtitle</h6>
-                                        <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p><a class="card-link" href="#">Link</a><a class="card-link"
-                                        href="#">Link</a></div>
+                                        <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p><a class="card-link" href="#">Reserve </a>
+                                        <a
+                                        class="card-link" href="#">Link</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
