--- a/faq.html
+++ b/faq.html
@@ -19,36 +19,29 @@
             <div class="collapse navbar-collapse" id="navcol-2">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="classes.html" style="font-family:Montserrat, sans-serif;">Classes </a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="faq.html" style="font-family:Montserrat, sans-serif;">FAQ </a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="faq.html" style="font-family:Montserrat, sans-serif;">FAQ </a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="contact.html" style="font-family:Montserrat, sans-serif;">Contact me</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <h3 class="text-center" style="font-family:Montserrat, sans-serif;">Frequently Asked Questions</h3>
-    <ul class="list-group">
-        <li class="list-group-item"><span>This is a question</span>
-            <p>This is an answer</p>
-        </li>
-        <li class="list-group-item"><span>This is a question</span>
-            <p>This is an answer</p>
-        </li>
-        <li class="list-group-item"><span>This is a question</span>
-            <p>This is an answer</p>
-        </li>
-        <li class="list-group-item"><span>This is a question</span>
-            <p>This is an answer</p>
-        </li>
-        <li class="list-group-item"><span>This is a question</span>
-            <p>This is an answer</p>
-        </li>
-        <li class="list-group-item"><span>This is a question</span>
-            <p>This is an answer</p>
-        </li>
-        <li class="list-group-item"><span>This is a question</span>
-            <p>This is an answer</p>
-        </li>
-    </ul>
+    <div class="container-fluid" style="background-color:#f1f7fc;">
+        <h3 class="text-center" style="font-family:Montserrat, sans-serif;margin-bottom:0px;">Frequently Asked Questions</h3>
+        <div class="row">
+            <div class="col">
+                <h5 style="font-family:Montserrat, sans-serif;">Where will the classes be taught?</h5>
+                <p style="font-family:Montserrat, sans-serif;">This is an answer</p>
+                <h5 style="font-family:Montserrat, sans-serif;">Will you be cooking with meat, poultry or seafood?</h5>
+                <p style="font-family:Montserrat, sans-serif;">This is an answer</p>
+                <h5 style="font-family:Montserrat, sans-serif;">Can we get printed recipes?</h5>
+                <p style="font-family:Montserrat, sans-serif;">This is an answer</p>
+                <h5 style="font-family:Montserrat, sans-serif;">How long do the classes last?</h5>
+                <p style="font-family:Montserrat, sans-serif;">This is an answer</p>
+                <h5 style="font-family:Montserrat, sans-serif;">This is a question</h5>
+                <p style="font-family:Montserrat, sans-serif;">This is an answer</p>
+            </div>
+        </div>
+    </div>
     <footer class="footer navbar-fixed-bottom" style="margin-top:0px;background-color:#404040;">
         <div class="container">
             <div class="row">
