--- a/contact.html
+++ b/contact.html
@@ -20,11 +20,27 @@
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="classes.html" style="font-family:Montserrat, sans-serif;">Classes </a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="faq.html" style="font-family:Montserrat, sans-serif;">FAQ </a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="contact.html" style="font-family:Montserrat, sans-serif;">Contact me</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="contact.html" style="font-family:Montserrat, sans-serif;">Contact me</a></li>
                 </ul>
             </div>
         </div>
     </nav>
+    <div class="contact-clean">
+        <form method="post">
+            <h2 class="text-center" style="font-family:Montserrat, sans-serif;">Contact me</h2>
+            <div class="form-group">
+                <input class="form-control" type="text" name="name" placeholder="Name" style="font-family:Montserrat, sans-serif;">
+            </div>
+            <div class="form-group">
+                <input class="form-control is-invalid" type="email" name="email" placeholder="Email" style="font-family:Montserrat, sans-serif;"><small class="form-text text-danger" style="font-family:Montserrat, sans-serif;">Please enter a correct email address.</small></div>
+            <div class="form-group">
+                <textarea class="form-control" rows="14" name="message" placeholder="Message" style="font-family:Montserrat, sans-serif;"></textarea>
+            </div>
+            <div class="form-group">
+                <button class="btn btn-primary" type="submit" style="font-family:Montserrat, sans-serif;">send </button>
+            </div>
+        </form>
+    </div>
     <footer class="footer navbar-fixed-bottom" style="margin-top:0px;background-color:#404040;">
         <div class="container">
             <div class="row">
